widget spacing fix for archive and footer and mobile

--- a/src/scss/components/_widgets.scss
+++ b/src/scss/components/_widgets.scss
@@ -1,6 +1,6 @@
 .widget {
   //  background-color: rebeccapurple;
-  padding-top: calc($spacer * 3);
+  // padding-top: calc($spacer * 3);
   margin-bottom: $spacer;
 
   .widget-title {
